# kicad_condenser

./: LICENSE  README.md  pyproject.toml
src/kicad_condenser/: __init__.py  cli.py
src/kicad_condenser/models/: netlist.py  schematic.py
src/kicad_condenser/netlist/: __init__.py  resolver.py
src/kicad_condenser/parser/: __init__.py  schematic.py  sexpr.py
src/kicad_condenser/serializer/: json_output.py
tests/regression/: conftest.py  test_regression.py
tests/regression/schematics/hierarchical/: expected.json  hierarchical.kicad_sch  sub.kicad_sch
tests/regression/schematics/rc_filter/: RC.kicad_pro  RC.kicad_sch  expected.json
tests/regression/schematics/resistor_divider/: expected.json  resistor_divider.kicad_pro  resistor_divider.kicad_sch
tests/regression/schematics/simple/: expected.json  simple.kicad_sch
tests/unit/: test_net_resolver.py  test_schematic_parser.py  test_sexpr.py
